oxiplate-derive/tests/broken/strings/unicode-escape-span.stderr
error: End of file encountered while parsing a writ. Expected `}}`, `-}}`, or `_}}`
 --> tests/broken/strings/unicode-escape-span.rs:4:34
  |
4 | #[oxiplate_inline("hello\u{7FFF}{{")]
  |                                  ^
